edited bmp file

--- a/bmp_to_jpeg.ipynb
+++ b/bmp_to_jpeg.ipynb
@@ -188,6 +188,7 @@
     "        avg = (img[x, y, 1] + img[x, y + 1, 1] + img[x + 1, y, 1] + img[x + 1, y + 1, 1]) // 4\n",
     "        Cb[i, j] = avg\n",
     "        avg = (img[x][y][2] + img[x][y + 1][2] + img[x + 1][y][2] + img[x + 1][y + 1][2]) // 4\n",
+    "        Cr[i, j] = avg\n",
     "\n",
     "# Discrete Cosine Transform\n",
     "Y -= 128\n",
@@ -408,16 +409,16 @@
     "# Writing jpeg image in binary\n",
     "jpeg_image = [0xff, 0xd8, 0xff, 0xe0, 0x00, 0x10]\n",
     "\n",
-    "header = [0x4a, 0x46, 0x49, 0x46, 0x00, 0x01, 0x01, 0x01, 0x00, 0x48, 0x00, 0x48, 0x00, 0x00, 0xff]\n",
+    "header = [0x4a, 0x46, 0x49, 0x46, 0x00, 0x01, 0x01, 0x01, 0x00, 0x48, 0x00, 0x48, 0x00, 0x00]\n",
     "jpeg_image.extend(header)\n",
     "\n",
-    "luminance_quantisation_table = [0xff, 0xdb, 0x00, 0x43]\n",
+    "luminance_quantisation_table = [0xff, 0xdb, 0x00, 0x43, 0x00]\n",
     "for ele in Y_q:\n",
     "    for x in ele:\n",
     "        luminance_quantisation_table.append(int(x))\n",
     "jpeg_image.extend(luminance_quantisation_table)\n",
     "\n",
-    "chrominance_quantisation_table = [0xff, 0xdb, 0x00, 0x43]\n",
+    "chrominance_quantisation_table = [0xff, 0xdb, 0x00, 0x43, 0x01]\n",
     "for ele in C_q:\n",
     "    for x in ele:\n",
     "        chrominance_quantisation_table.append(int(x))\n",
@@ -501,7 +502,7 @@
     "s = data.hex()\n",
     "\n",
     "l = re.findall('..?', s)\n",
-    "d = np.reshape(l, (-1, 113))\n",
+    "d = np.reshape(l, (-1, 4))\n",
     "d = [' '.join(ele) for ele in d]\n",
     "for ele in d:\n",
     "    print(ele)\n",
