--- a/clean_convertor.ipynb
+++ b/clean_convertor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "319bdf21",
    "metadata": {},
    "outputs": [],
@@ -4132,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "da3bf7c6",
    "metadata": {},
    "outputs": [
@@ -5491,13 +5491,7 @@
       "0111\n",
       "100100\n",
       "000\n",
-      "100011\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "100011\n",
       "0101\n",
       "000\n",
       "0100\n",
@@ -7339,13 +7333,7 @@
       "100001\n",
       "0101\n",
       "111110101\n",
-      "0101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0101\n",
       "11001\n",
       "1111100110\n",
       "11111111100000010\n",
@@ -9184,13 +9172,7 @@
       "0100\n",
       "11001\n",
       "0110\n",
-      "000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "000\n",
       "1101100\n",
       "000\n",
       "000\n",
@@ -11164,13 +11146,7 @@
       " [  0  -7]\n",
       " [  1  -4]\n",
       " [  0   0]]\n",
-      "11001010\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11001010\n",
       "1101000100\n",
       "111110001001100\n",
       "1111000011111\n",
@@ -12929,13 +12905,7 @@
       " [  3   1]\n",
       " [  1  -1]\n",
       " [  1  -1]\n",
-      " [  4  -1]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [  4  -1]\n",
       " [  0   0]]\n",
       "110010\n",
       "011\n",
@@ -14866,13 +14836,7 @@
       "0101\n",
       "0111\n",
       "001\n",
-      "0111\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0111\n",
       "1010\n",
       "201\n",
       "[[  0  10]\n",
@@ -16508,13 +16472,7 @@
       "1110101\n",
       "010\n",
       "1110101\n",
-      "011\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "011\n",
       "010\n",
       "10001\n",
       "10111\n",
@@ -18409,13 +18367,7 @@
       "1101000000\n",
       "1101011101\n",
       "100010\n",
-      "10110110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "10110110\n",
       "10111110\n",
       "10110010\n",
       "1101001110\n",
@@ -19912,13 +19864,7 @@
       "1111001001\n",
       "10110111\n",
       "100001\n",
-      "0110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0110\n",
       "0110\n",
       "100000\n",
       "0110\n",
@@ -22015,13 +21961,7 @@
       " [  0  -5]\n",
       " [  0   1]\n",
       " [  1  -3]\n",
-      " [  0  -1]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [  0  -1]\n",
       " [  0   0]]\n",
       "1110100100\n",
       "100010\n",
@@ -23640,13 +23580,7 @@
       " [  0   2]\n",
       " [  0   0]]\n",
       "1111000000\n",
-      "10001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "10001\n",
       "110001110\n",
       "010\n",
       "110000101\n",
@@ -25427,13 +25361,7 @@
       "1110110\n",
       "1101100\n",
       "000\n",
-      "001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "001\n",
       "000\n",
       "000\n",
       "000\n",
@@ -27403,13 +27331,7 @@
       "0100\n",
       "10111000\n",
       "1101000111\n",
-      "11001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11001\n",
       "100110\n",
       "1111001010\n",
       "1101010010\n",
@@ -29279,13 +29201,7 @@
       "000\n",
       "0110\n",
       "0110\n",
-      "1111100110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1111100110\n",
       "001\n",
       "11000\n",
       "1110101\n",
@@ -31160,13 +31076,7 @@
       "1010011\n",
       "011\n",
       "1010001\n",
-      "1010101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1010101\n",
       "10110\n",
       "11111011011\n",
       "1010000\n",
@@ -32686,13 +32596,7 @@
       "1101010010\n",
       "10111010\n",
       "100111\n",
-      "0100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0100\n",
       "100011\n",
       "0101\n",
       "0111\n",
@@ -34189,13 +34093,7 @@
       "1111100100\n",
       "0100\n",
       "1010\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "450\n",
       "[[  0 -17]\n",
       " [  0  12]\n",
       " [  0  -2]\n",
@@ -34321,7 +34219,13 @@
       "011\n",
       "10110\n",
       "011\n",
-      "10110\n",
+      "10110\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "10110\n",
       "1110100\n",
       "1110101\n",
@@ -36516,13 +36420,7 @@
       "100100\n",
       "000\n",
       "0111\n",
-      "1101101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1101101\n",
       "0101\n",
       "001\n",
       "000\n",
@@ -38005,13 +37903,7 @@
       " [  0   0]]\n",
       "1011001\n",
       "1101001010\n",
-      "1101000110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1101000110\n",
       "10110101\n",
       "1101000111\n",
       "10110110\n",
@@ -39984,13 +39876,7 @@
       "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
-      "1010\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1010\n",
       "730\n",
       "[[0 0]\n",
       " [0 0]]\n",
@@ -41626,13 +41512,7 @@
       "00\n",
       "1010\n",
       "cbcr\n",
-      "[[0 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
       "00\n",
@@ -43346,13 +43226,7 @@
       "3a d7 71 65 63 0e 9f 6c 90 41 1a\n",
       "c5 12 00 aa 88 30 00 f4 02 a4 82\n",
       "de 3b 58 52 28 51 63 89 06 d5 45\n",
-      "18 0a 3d 00 a9 2b 1a 38 75 4f de\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "18 0a 3d 00 a9 2b 1a 38 75 4f de\n",
       "7b fe 5e 9f af 7f 4b 24 3a 95 1c\n",
       "f4 e8 14 52 63 34 b5 d6 62 14 51\n",
       "45 00 14 51 45 00 14 51 45 00 14\n",
@@ -43406,18 +43280,18 @@
     "\n",
     "s = img.shape\n",
     "# print(s)\n",
-    "# new_shape = (((s[0] + 15) // 16) * 16, ((s[1] + 15) // 16) * 16, s[2])\n",
-    "# new_image = np.zeros(new_shape, dtype = 'float32')\n",
-    "# new_image[:s[0], :s[1], :] = img\n",
+    "new_shape = (((s[0] + 15) // 16) * 16, ((s[1] + 15) // 16) * 16, s[2])\n",
+    "new_image = np.zeros(new_shape, dtype = 'uint8')\n",
+    "new_image[:s[0], :s[1], :] = img\n",
     "# img = np.array(new_image)\n",
-    "# old_shape = s\n",
-    "# s = new_shape\n",
+    "old_shape = s\n",
+    "s = new_shape\n",
     "s1 = (s[0] // 2, s[1] // 2)\n",
     "\n",
     "# todo - padding\n",
     "\n",
     "# conversion from RGB format to YCbCr (Y -> Luminance, Cb -> blue chrominance, Cr -> red chrominance)\n",
-    "imgYCC = cv2.cvtColor(img, cv2.COLOR_BGR2YCR_CB)\n",
+    "imgYCC = cv2.cvtColor(new_image, cv2.COLOR_BGR2YCR_CB)\n",
     "Y = imgYCC[:,:,0]\n",
     "Cb = np.zeros(s1, dtype = int)\n",
     "Cr = np.zeros(s1, dtype = int)\n",
@@ -45284,6 +45158,14 @@
     "print(\"ac C\")\n",
     "print(codes_ac_C)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83b78411",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -45302,7 +45184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
