--- a/Grace/clean_convertor.ipynb
+++ b/Grace/clean_convertor.ipynb
@@ -4132,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "id": "da3bf7c6",
    "metadata": {},
    "outputs": [
@@ -4172,6 +4172,14 @@
       " [   0.    0.    0.    0.    0.    0.    0.    0.]\n",
       " [   0.    0.    0.    0.    0.    0.    0.    0.]\n",
       " [   0.    0.    0.    0.    0.    0.    0.    0.]]\n",
+      "[[ 3.  2.  2.  3.  5.  8. 10. 12.]\n",
+      " [ 2.  2.  3.  4.  5. 12. 12. 11.]\n",
+      " [ 3.  3.  3.  5.  8. 11. 14. 11.]\n",
+      " [ 3.  3.  4.  6. 10. 17. 16. 12.]\n",
+      " [ 4.  4.  7. 11. 14. 22. 21. 15.]\n",
+      " [ 5.  7. 11. 13. 16. 21. 23. 18.]\n",
+      " [10. 13. 16. 17. 21. 24. 24. 20.]\n",
+      " [14. 18. 19. 20. 22. 20. 21. 20.]]\n",
       "[array([[  0, 339],\n",
       "        [  0,   0]]) array([[0, 0],\n",
       "                            [0, 0]]) array([[0, 0],\n",
@@ -4973,7 +4981,13 @@
       " [ 0  1]\n",
       " [ 0  1]\n",
       " [12 -1]\n",
-      " [ 0 -1]\n",
+      " [ 0 -1]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " [ 0  0]]\n",
       "11011010\n",
       "100010\n",
@@ -5491,13 +5505,7 @@
       "0111\n",
       "100100\n",
       "000\n",
-      "100011\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "100011\n",
       "0101\n",
       "000\n",
       "0100\n",
@@ -6728,7 +6736,13 @@
       "1101101\n",
       "0110\n",
       "0101\n",
-      "000\n",
+      "000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0111\n",
       "0101\n",
       "001\n",
@@ -7339,13 +7353,7 @@
       "100001\n",
       "0101\n",
       "111110101\n",
-      "0101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0101\n",
       "11001\n",
       "1111100110\n",
       "11111111100000010\n",
@@ -8199,7 +8207,13 @@
       "001\n",
       "001\n",
       "111110100\n",
-      "111001\n",
+      "111001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0110\n",
       "1111110011\n",
       "000\n",
@@ -9184,13 +9198,7 @@
       "0100\n",
       "11001\n",
       "0110\n",
-      "000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "000\n",
       "1101100\n",
       "000\n",
       "000\n",
@@ -9817,7 +9825,13 @@
       "0100\n",
       "0101\n",
       "100011\n",
-      "1010\n",
+      "1010\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "cbcr\n",
       "[[  0 -76]\n",
       " [  0  -2]\n",
@@ -11164,13 +11178,7 @@
       " [  0  -7]\n",
       " [  1  -4]\n",
       " [  0   0]]\n",
-      "11001010\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11001010\n",
       "1101000100\n",
       "111110001001100\n",
       "1111000011111\n",
@@ -11827,7 +11835,13 @@
       "1101011011\n",
       "100011\n",
       "1101001000\n",
-      "000\n",
+      "000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "100001\n",
       "100110\n",
       "1101010000\n",
@@ -12929,13 +12943,7 @@
       " [  3   1]\n",
       " [  1  -1]\n",
       " [  1  -1]\n",
-      " [  4  -1]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [  4  -1]\n",
       " [  0   0]]\n",
       "110010\n",
       "011\n",
@@ -13380,7 +13388,13 @@
       " [  0   6]\n",
       " [  0  -2]\n",
       " [  1   3]\n",
-      " [  0   3]\n",
+      " [  0   3]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " [  0   0]]\n",
       "111101001100\n",
       "10110000\n",
@@ -14866,13 +14880,7 @@
       "0101\n",
       "0111\n",
       "001\n",
-      "0111\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0111\n",
       "1010\n",
       "201\n",
       "[[  0  10]\n",
@@ -15270,7 +15278,13 @@
       "10000\n",
       "010\n",
       "011\n",
-      "110001011\n",
+      "110001011\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "110001011\n",
       "10011\n",
       "011\n",
@@ -16508,13 +16522,7 @@
       "1110101\n",
       "010\n",
       "1110101\n",
-      "011\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "011\n",
       "010\n",
       "10001\n",
       "10111\n",
@@ -17215,7 +17223,13 @@
       "1111001101\n",
       "100110\n",
       "000\n",
-      "0101\n",
+      "0101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0101\n",
       "100001\n",
       "0101\n",
@@ -18409,13 +18423,7 @@
       "1101000000\n",
       "1101011101\n",
       "100010\n",
-      "10110110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "10110110\n",
       "10111110\n",
       "10110010\n",
       "1101001110\n",
@@ -19171,7 +19179,13 @@
       "0100\n",
       "100011\n",
       "1101101\n",
-      "100111\n",
+      "100111\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0100\n",
       "10111100\n",
       "100001\n",
@@ -19912,13 +19926,7 @@
       "1111001001\n",
       "10110111\n",
       "100001\n",
-      "0110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0110\n",
       "0110\n",
       "100000\n",
       "0110\n",
@@ -20860,7 +20868,13 @@
       "001\n",
       "0100\n",
       "1111100110\n",
-      "1111100101\n",
+      "1111100101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1101110\n",
       "001\n",
       "000\n",
@@ -22015,13 +22029,7 @@
       " [  0  -5]\n",
       " [  0   1]\n",
       " [  1  -3]\n",
-      " [  0  -1]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [  0  -1]\n",
       " [  0   0]]\n",
       "1110100100\n",
       "100010\n",
@@ -22571,7 +22579,13 @@
       "0100\n",
       "100100\n",
       "100100\n",
-      "0101\n",
+      "0101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "000\n",
       "0111\n",
       "100011\n",
@@ -23640,13 +23654,7 @@
       " [  0   2]\n",
       " [  0   0]]\n",
       "1111000000\n",
-      "10001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "10001\n",
       "110001110\n",
       "010\n",
       "110000101\n",
@@ -24217,7 +24225,13 @@
       "001\n",
       "001\n",
       "111001\n",
-      "1010\n",
+      "1010\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "289\n",
       "[[ 0 15]\n",
       " [ 0  0]]\n",
@@ -25427,13 +25441,7 @@
       "1110110\n",
       "1101100\n",
       "000\n",
-      "001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "001\n",
       "000\n",
       "000\n",
       "000\n",
@@ -26541,7 +26549,13 @@
       "0111\n",
       "0111\n",
       "000\n",
-      "0110\n",
+      "0110\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "100100\n",
       "001\n",
       "1111001100\n",
@@ -27403,13 +27417,7 @@
       "0100\n",
       "10111000\n",
       "1101000111\n",
-      "11001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11001\n",
       "100110\n",
       "1111001010\n",
       "1101010010\n",
@@ -27928,7 +27936,13 @@
       "0110\n",
       "0101\n",
       "100010\n",
-      "1010\n",
+      "1010\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "343\n",
       "[[  0 -19]\n",
       " [  0  16]\n",
@@ -29279,13 +29293,7 @@
       "000\n",
       "0110\n",
       "0110\n",
-      "1111100110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1111100110\n",
       "001\n",
       "11000\n",
       "1110101\n",
@@ -29551,7 +29559,13 @@
       "100101\n",
       "100100\n",
       "0101\n",
-      "100101\n",
+      "100101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1111100101\n",
       "000\n",
       "100101\n",
@@ -31160,13 +31174,7 @@
       "1010011\n",
       "011\n",
       "1010001\n",
-      "1010101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1010101\n",
       "10110\n",
       "11111011011\n",
       "1010000\n",
@@ -31518,7 +31526,13 @@
       " [  0   1]\n",
       " [  0   1]\n",
       " [  0  -3]\n",
-      " [  0   1]\n",
+      " [  0   1]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " [  0   0]]\n",
       "11010101\n",
       "1101011011\n",
@@ -32686,13 +32700,7 @@
       "1101010010\n",
       "10111010\n",
       "100111\n",
-      "0100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0100\n",
       "100011\n",
       "0101\n",
       "0111\n",
@@ -33332,7 +33340,13 @@
       "0101\n",
       "100011\n",
       "1111001011\n",
-      "001\n",
+      "001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "001\n",
       "100100\n",
       "001\n",
@@ -34189,13 +34203,7 @@
       "1111100100\n",
       "0100\n",
       "1010\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "450\n",
       "[[  0 -17]\n",
       " [  0  12]\n",
       " [  0  -2]\n",
@@ -34893,7 +34901,13 @@
       "11001\n",
       "000\n",
       "1010\n",
-      "458\n",
+      "458\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[[  0  49]\n",
       " [  0  17]\n",
       " [  0  -6]\n",
@@ -36516,13 +36530,7 @@
       "100100\n",
       "000\n",
       "0111\n",
-      "1101101\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1101101\n",
       "0101\n",
       "001\n",
       "000\n",
@@ -36548,7 +36556,13 @@
       "11000\n",
       "0101\n",
       "0101\n",
-      "000\n",
+      "000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "000\n",
       "1010\n",
       "471\n",
@@ -38005,13 +38019,7 @@
       " [  0   0]]\n",
       "1011001\n",
       "1101001010\n",
-      "1101000110\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1101000110\n",
       "10110101\n",
       "1101000111\n",
       "10110110\n",
@@ -38080,7 +38088,13 @@
       "110100\n",
       "10001\n",
       "00\n",
-      "524\n",
+      "524\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
@@ -39984,13 +39998,7 @@
       "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
-      "1010\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1010\n",
       "730\n",
       "[[0 0]\n",
       " [0 0]]\n",
@@ -40511,7 +40519,13 @@
       "801\n",
       "[[0 0]\n",
       " [0 0]]\n",
-      "00\n",
+      "00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1010\n",
       "802\n",
       "[[0 0]\n",
@@ -41626,13 +41640,7 @@
       "00\n",
       "1010\n",
       "cbcr\n",
-      "[[0 0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
       "00\n",
@@ -42198,7 +42206,13 @@
       "[[0 0]\n",
       " [0 0]]\n",
       "00\n",
-      "00\n",
+      "00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1191\n",
       "ff d8 ff e0 00 10 4a 46 49 46 00\n",
       "01 01 01 00 48 00 48 00 00 ff db\n",
@@ -43346,13 +43360,7 @@
       "3a d7 71 65 63 0e 9f 6c 90 41 1a\n",
       "c5 12 00 aa 88 30 00 f4 02 a4 82\n",
       "de 3b 58 52 28 51 63 89 06 d5 45\n",
-      "18 0a 3d 00 a9 2b 1a 38 75 4f de\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "18 0a 3d 00 a9 2b 1a 38 75 4f de\n",
       "7b fe 5e 9f af 7f 4b 24 3a 95 1c\n",
       "f4 e8 14 52 63 34 b5 d6 62 14 51\n",
       "45 00 14 51 45 00 14 51 45 00 14\n",
@@ -43392,7 +43400,13 @@
       "8c a9 0c 32 46 41 ee 38 34 b4 93\n",
       "52 49 a7 74 c0 28 a2 8a 60 14 51\n",
       "45 00 14 51 45 00 14 51 45 00 14\n",
-      "51 45 00 14 51 45 00 14 51 45 00\n",
+      "51 45 00 14 51 45 00 14 51 45 00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "14 51 45 00 14 51 45 00 14 51 45\n",
       "00 14 51 45 00 14 51 45 00 14 51\n",
       "45 00 14 51 45 00 14 51 45 00 00\n",
@@ -43520,6 +43534,7 @@
     "        Y_q[spiral[cur][0]][spiral[cur][1]] = myArr[i][j]\n",
     "        C_q[spiral[cur][0]][spiral[cur][1]] = myArr2[i][j]\n",
     "        cur += 1\n",
+    "print(Y_q)\n",
     "for i in range(len_y):\n",
     "    Y_blocks[i] = np.around(Y_blocks[i] / Y_q)\n",
     "for i in range(len_c):\n",
@@ -43912,7 +43927,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e64637de",
+   "id": "82e07824",
    "metadata": {},
    "outputs": [
     {
@@ -45133,7 +45148,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c2f234b7",
+   "id": "6a953868",
    "metadata": {},
    "outputs": [
     {
@@ -45284,6 +45299,14 @@
     "print(\"ac C\")\n",
     "print(codes_ac_C)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd72f775",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
